# basyx-security-layer

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .style.yapf  Dockerfile  LICENSE  README.md  fix_all_files.py  fix_imports.py  fix_line_length.py  fix_long_lines.py  fix_specific_files.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
basyx_security/: __init__.py
basyx_security/aas_wrapper/: provider.py  secure_aas.py  secure_element.py  secure_submodel.py
basyx_security/core/: __init__.py  audit.py  enums.py  rate_limiter.py  security_context.py  security_manager.py  session.py
docs/: code-style.md  index.md  security-features.md
examples/: advanced_security_example.py  basic_security_example.py
sdk/: pyproject.toml
sdk/basyx/: version.py
sdk/basyx/aas/adapter/: _generic.py  aasx.py  http.py
sdk/basyx/aas/adapter/json/: __init__.py  json_deserialization.py  json_serialization.py
sdk/basyx/aas/adapter/xml/: __init__.py  xml_deserialization.py  xml_serialization.py
sdk/basyx/aas/backend/: backends.py  couchdb.py  local_file.py
sdk/basyx/aas/examples/: tutorial_aasx.py  tutorial_backend_couchdb.py  tutorial_create_simple_aas.py  tutorial_serialization_deserialization.py  tutorial_storage.py
sdk/basyx/aas/examples/data/: __init__.py  _helper.py  example_aas.py  example_aas_mandatory_attributes.py  example_aas_missing_attributes.py  example_submodel_template.py
sdk/basyx/aas/model/: __init__.py  _string_constraints.py  aas.py  base.py  concept.py  datatypes.py  provider.py  submodel.py
sdk/basyx/aas/util/: identification.py  traversal.py
sdk/basyx/security/: __init__.py  aas_wrapper.py  core.py
sdk/docs/source/: conf.py
sdk/examples/: secure_aas_example.py
sdk/test/: test_security.py
sdk/test/_helper/: setup_testdb.py  test_helpers.py
sdk/test/adapter/: test_http.py
sdk/test/adapter/aasx/: test_aasx.py
sdk/test/adapter/json/: test_json_deserialization.py  test_json_serialization.py  test_json_serialization_deserialization.py
sdk/test/adapter/xml/: test_xml_deserialization.py  test_xml_serialization.py  test_xml_serialization_deserialization.py
sdk/test/backend/: test_backends.py  test_couchdb.py  test_local_file.py
sdk/test/examples/: test__init__.py  test_examples.py  test_helpers.py  test_tutorials.py
sdk/test/model/: test_aas.py  test_base.py  test_concept.py  test_datatypes.py  test_provider.py  test_string_constraints.py  test_submodel.py
sdk/test/util/: test_identification.py
server/app/: main.py
tests/: test_security.py
