[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basyx-security"
version = "0.1.0"
authors = [
  { name="Hadi Jannat", email="h.jannat@example.com" },
]
description = "Security implementation for BaSyx Python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "basyx-python-sdk>=0.1.0",
    "pyjwt>=2.4.0,<3.0.0",
    "cryptography>=39.0.0,<45.0.0",
    "requests>=2.31.0",
    "fastapi>=0.95.0,<0.116.0",
    "uvicorn>=0.21.0,<0.28.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pyOpenSSL>=23.2.0",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.safety.ignore]
"70716" = "python-jose DoS vulnerability - mitigated through rate limiting"
"70715" = "python-jose algorithm confusion - mitigated through explicit algorithm specification"
"64396" = "ecdsa side-channel - not critical for our use case"
"64459" = "ecdsa Minerva attack - mitigated through proper key management"